// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 20010-11-08
------------------------------------
by hutch, changed img_date field to int, added date format to config

Image Picker  for D6 in DRUPAL-6--2, 20010-11-07
------------------------------------
by hutch, fixed hook_form_alter reference bug and incompatibility with filepicker

Image Picker  for D6 in DRUPAL-6--2, 20010-10-09
------------------------------------
by hutch, improved theming in browse and list
fixed sql count in group table

Image Picker  for D6 in DRUPAL-6--2, 20010-10-06
------------------------------------
by hutch, added groups to Bulk Operations

Image Picker  for D6 in DRUPAL-6--2, 20010-09-23
------------------------------------
by hutch, added Bulk Operations to image list

Image Picker  for D6 in DRUPAL-6--2, 20010-09-18
------------------------------------
by hutch, added IMAGEPICKER_PATH constant

Image Picker  for D6 in DRUPAL-6--2, 20010-09-08
------------------------------------
by hutch, improved iframe integration

Image Picker  for D6 in DRUPAL-6--2, 20010-08-23
------------------------------------
by hutch, improved wysiwyg support

Image Picker  for D6 in DRUPAL-6--2, 20010-08-09
------------------------------------
by hutch, fixed public groups bug #873094
added js to public groups form

Image Picker  for D6 in DRUPAL-6--2, 20010-08-02
------------------------------------
by hutch, fixed groups paging, improved theming,
added config for table paging.

Image Picker  for D6 in DRUPAL-6--2, 20010-07-10
------------------------------------
by hutch, added menu access callback functions

Image Picker  for D6 in DRUPAL-6--2, 20010-06-14
------------------------------------
by hutch, replaced include_once with module_load_include

Image Picker  for D6 in DRUPAL-6--2, 20010-06-09
------------------------------------
by hutch, added class imgp_img to inserted image
replaced split() with explode()

Image Picker  for D6 in DRUPAL-6--2, 20010-05-15